Project

General

Profile

Actions

Bug #18595

closed

bluestore: allocator fails for 0x80000000 allocations

Added by Sage Weil over 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
BlueStore
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I have a bluestore OSD that is near full where bluestore is calling BlueFS::reclaim_blocks. There is lots of space free, but the bitmap allocator is returning ENOSPC.

Log is attached.


Files

ceph-osd.5.log.gz (227 KB) ceph-osd.5.log.gz Sage Weil, 01/20/2017 01:11 AM

Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #20884: kraken: bluestore: allocator fails for 0x80000000 allocationsResolvedSage WeilActions
Actions #1

Updated by Sage Weil over 7 years ago

  • Subject changed from bitmap allocator: failure to allocate for bluefs reclaim to bluestore: allocator fails for 0x80000000 allocations

Turns out this is an int64_t -> int thing. bah!

Actions #2

Updated by Sage Weil over 7 years ago

  • Status changed from New to Resolved
Actions #4

Updated by Greg Farnum almost 7 years ago

  • Project changed from Ceph to RADOS
  • Category deleted (107)
Actions #5

Updated by Greg Farnum almost 7 years ago

  • Component(RADOS) BlueStore added
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Status changed from Resolved to Pending Backport
Actions #7

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #20884: kraken: bluestore: allocator fails for 0x80000000 allocations added
Actions #8

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF