os/bluestore: fix Allocator::allocate() int truncation

An allocation of size 0x80000000 gets truncated to 0.  Larger values can
break things in similar ways.

Introduced in b65bce3a29e529ea24a64f94259e01a9cc466d74.

Fixes: http://tracker.ceph.com/issues/18595
Signed-off-by: Sage Weil <sage@redhat.com>